--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,121 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  min-height: 100vh;
+  /* mobile viewport bug fix */
+  min-height: -webkit-fill-available;
+}
+html {
+  height: -webkit-fill-available;
+}
+
+.bg-gradient-type-1 {
+  background: linear-gradient(
+    97.95deg,
+    #4d94e7 20.61%,
+    #006ae6 47.32%,
+    #1dc1a4 84.86%
+  );
+  backdrop-filter: blur(10px);
+}
+
+.bg-gradient-type-2 {
+  background: linear-gradient(
+    163.46deg,
+    #4d94e7 22.7%,
+    #006ae6 48.01%,
+    #1dc1a4 83.58%
+  );
+}
+
+.text-gradient-type-1 {
+  background: linear-gradient(
+    97.95deg,
+    #4d94e7 20.61%,
+    #006ae6 47.32%,
+    #1dc1a4 84.86%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  text-fill-color: transparent;
+}
+
+.bg-gradient-type-2 {
+  background: linear-gradient(
+    163.46deg,
+    #4d94e7 22.7%,
+    #006ae6 48.01%,
+    #1dc1a4 83.58%
+  );
+}
+
+.text-gradient-type-2 {
+  background: linear-gradient(
+    163.46deg,
+    #4d94e7 22.7%,
+    #006ae6 48.01%,
+    #1dc1a4 83.58%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.container {
+  width: 100%;
+  max-width: calc(1058px + 32px);
+  padding-left: 16px;
+  padding-right: 16px;
+  margin: 0 auto;
+}
+
+.scrollbar-hide {
+  scrollbar-width: none;
+  scrollbar-height: none;
+  -ms-overflow-style: none;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  width: 0px;
+  height: 0px;
+}
+
+.user-select-none {
+  user-select: none;
+}
+
+.h-screen {
+  height: 100vh;
+  height: -moz-available;
+  height: -webkit-fill-available;
+  height: fill-available;
+}
+
+.h-content {
+  height: calc(
+    100vh - 80px - env(safe-area-inset-bottom) - env(safe-area-inset-top)
+  );
+}
+
+.min-h-content {
+  min-height: calc(
+    100vh - 80px - env(safe-area-inset-bottom) - env(safe-area-inset-top)
+  );
+}
+
+@media (max-width: 1279px) {
+  .h-content {
+    height: calc(
+      100vh - 80px - env(safe-area-inset-bottom) - env(safe-area-inset-top)
+    );
+  }
+}
+
+.elipsis-row-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
